Fix: Altera Rotas

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Ruan-Portella.github.io/TrybeTunes",
+  "homepage": "https://Ruan-Portella.github.io/TrybeTunes/",
   "name": "trybetunes",
   "version": "1.0.1",
   "private": true,
